[tool.poetry]
name = "fast-kafka"
version = "0.1.0"
description = ""
authors = ["falcolnic <mykh.yano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
motor = "^3.5.1"
uvicorn = {extras = ["all"], version = "^0.30.6"}
ipython = "^8.26.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
