[tool.poetry]
name = "fast-kafka"
version = "0.1.0"
description = ""
authors = ["falcolnic <mykh.yano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
motor = "^3.5.1"
uvicorn = {extras = ["all"], version = "^0.30.6"}
ipython = "^8.26.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
Faker = "^28.1.0"
punq = "^0.7.0"
httpx = "^0.27.2"
pydantic-settings = "^2.4.0"
aiokafka = "^0.11.0"
orjson = "^3.10.7"
websockets = "^13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
