[tool.poetry]
name = "fast-kafka"
version = "0.1.0"
description = ""
authors = ["falcolnic <mykh.yano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
motor = "^3.5.1"
uvicorn = {extras = ["all"], version = "^0.30.6"}
ipython = "^8.26.0"
punq = "^0.7.0"
httpx = "^0.27.2"
pydantic-settings = "^2.4.0"
aiokafka = "^0.11.0"
orjson = "^3.10.7"
websockets = "^13.1"
aiojobs = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
faker = "^30.6.0"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.1"
ruff = "^0.7.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output=3 
include_trailing_comma=true
line_length=120
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["core", ]
skip_glob=[
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
]
known_fastapi=["fastapi","starlette"]
known_first_party=["application","domain","infra","logic","settings","tests"]
sections=[
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]


